bin/testsuite/tests/compiler/src/errors/compiler4970.swg
#global testerror "Err0437"
struct(.) AA
{
}
